--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -49,13 +49,14 @@ jobs:
           if [ ! -f "$FILE" ]; then
             echo "No xcresult found" && exit 1
           fi
-          ENGINE_COV=$(xcrun xccov view --report --json "$FILE" | python3 - <<'PY'
+          ENGINE_COV=$(
+            xcrun xccov view --report --json "$FILE" | python3 - <<'PY'
 import json, sys
 data = json.load(sys.stdin)
 target = next((t for t in data.get("targets", []) if t.get("name") == "MathCrosswordEngine"), None)
 print(target["lineCoverage"] if target else 0)
 PY
-)
+          )
           echo "MathCrosswordEngine coverage: $ENGINE_COV"
           awk -v cov="$ENGINE_COV" 'BEGIN { if (cov+0 < 0.90) { print "Coverage below threshold"; exit 1 } }'
 
