--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -14,6 +14,15 @@ jobs:
       - name: Select Xcode
         run: sudo xcode-select -s /Applications/Xcode.app
 
+      - name: Install Tuist
+        run: |
+          curl -Ls https://install.tuist.io | bash
+          echo "$HOME/.tuist/bin" >> $GITHUB_PATH
+          tuist version
+
+      - name: Generate project
+        run: tuist generate
+
       - name: Cache SPM
         uses: actions/cache@v4
         with:
@@ -37,7 +46,7 @@ jobs:
           set -o pipefail
           mkdir -p artifacts
           xcodebuild \
-            -project "MathCrossword.xcodeproj" \
+            -workspace "MathCrossword.xcworkspace" \
             -scheme "MathCrosswordEngineTests" \
             -destination 'platform=iOS Simulator,name=iPhone 17 Pro,OS=latest' \
             -enableCodeCoverage YES \
